Now using isHashtagChar() instead of isUsernameChar() for hashtags
git-svn-id: http://qwit.googlecode.com/svn/trunk@177 067a171b-6953-0410-b330-3d32600bf046

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ set( qwit_SRCS
 	src/StatusTextEdit.cpp
 	src/Twitter.cpp
 	src/TwitterWidget.cpp
+	src/TwitterWidgetItem.cpp
 	src/UserpicsDownloader.cpp
 	src/TwitPicDialog.cpp
 	)
